Modify query translator to identify field types and code refactoring/bug fixing